--- a/package.json
+++ b/package.json
@@ -6,5 +6,25 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
-  }
+  },
+  "name": "bosquebahualapp",
+  "version": "1.0.0",
+  "main": "app.js",
+  "type": "module",
+  "scripts": {
+    "dev": "nodemon src/js/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/diegofagu/BosqueBahualApp.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/diegofagu/BosqueBahualApp/issues"
+  },
+  "homepage": "https://github.com/diegofagu/BosqueBahualApp#readme",
+  "description": ""
 }
