feat: se cambia la estructura del proyecto, se agrega carpeta views y se referencia css a los ejs

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/js/app.js",
+    "dev": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
